make my profile prettier

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="card-white" id=ella-profile>
-        <h2>This is hello, the fastest dog in East London 💨</h2>
+        <h2>This is Chica, the fastest dog in East London 💨</h2>
           <img class = "img-circle-smaller" src="images/chica.jpeg" alt="picture of Chica" height="150">
       </div>
 
