make my profile prettier

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <h1>Hello, I'm Ella 👩🏼‍💻</h1>
           <img class = "img-circle" src="images/ella_cropped.jpeg" alt="picture of Ella" height="180">
           <p>I am an aspiring coder who really needs a new profile picture. <br> I love horror films and negronis 🥃</p>
-          <a href="https://www.rollingstone.com/movies/movie-lists/top-30-stephen-king-movies-ranked-197945/" target="_blank">
-            <button >Click here to get scared 🧟‍♀️</button>
+          <a href="https://www.empireonline.com/movies/features/best-horror-movies/" target="_blank">
+            <button >Click here for horror 🧟‍♀️</button>
           </a>
       </div>
 
