--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/?hl=en-gb" class="social-icon" target="_blank">
+            <a href="https://www.instagram.com/ellaherlihy/?hl=en-gb" class="social-icon" target="_blank">
               <i class="fab fa-instagram"  ></i>
             </a>
           </li>
