--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div class="card-white" id=ella-profile>
         <h2>This is Chica, the fastest dog in East London 💨</h2>
           <img class = "img-circle-smaller" src="images/chica.jpeg" alt="picture of Chica" height="150">
+          <p>Derp</p>
       </div>
 
       <div id="social-posts">
